fix whitespace

--- a/src/index.scss
+++ b/src/index.scss
@@ -39,7 +39,10 @@ html,
   flex-grow: 1;
   width: calc(100vw);
   margin: 0;
-  margin-top: 65px;
+  margin-top: 35px;
+}
+.ui.segment.sticky {
+  border-radius: 0 !important;
 }
 .ui.header.login-heading {
   letter-spacing: 1.5px;
